--- a/public/submit-url.html
+++ b/public/submit-url.html
@@ -9,6 +9,9 @@
   </head>
   <body>
 
+  <p id='submit-url'>
+    Submit
+  </p>
   <!-- Modal pop-up on submission -->
   <div class="modal-overlay closed" id="modal-overlay"></div>
   <div class="modal closed" id="modal">
