#12 creates all views and connects them with routing

--- a/public/url-form.html
+++ b/public/url-form.html
@@ -9,6 +9,7 @@
   </head>
   <body>
 
+  <input type="text" name="" placeholder="https://websitelocation" value="">
   <p id='submit-url'>
     Submit
   </p>
