--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link rel="stylesheet" href="/css/main.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
@@ -15,7 +16,7 @@
 
       <img src="images/iwf-logo.png" alt="IWF logo">
       <img src="images/childline-logo.jpg" alt="childline logo">
-      <button>Report Here</button>
+      <a class="waves-effect waves-light btn" href='/age-check'>Report Here</a>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
