#33 adds fonts and stylings landing page

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link rel="stylesheet" href="/css/main.css">
+      <link type="text/css" rel="stylesheet" href="css/main.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
 
-      <h1 class='title-main'>Anonomously Report Online Content</h1>
-      <p class='info-main'>
-        If you’re under 18 and an indecent or nude pic of you is posted online, that is illegal. But we can help. Reporting is quick, easy and compeltely anonymous.
-      </p>
+      <div class='landing-title'>
+        <span class='landing-title__phone'>Call 0800 1111 <i class="small material-icons whi">phonelink_ring</i></span>
+        <h1>Anonomously Report Online Content</h1>
+        <!-- <h3>Anonomously and Confidentially</h3> -->
+      </div>
 
-      <img src="images/iwf-logo.png" alt="IWF logo">
-      <img src="images/childline-logo.jpg" alt="childline logo">
-      <a class="waves-effect waves-light btn" href='/age-check'>Report Here</a>
+      <div class='landing-info'>
+        <p >
+          If you’re under 18 and an indecent or nude pic of you is posted online, that is illegal. But we can help. Reporting is quick, easy and compeltely anonymous.
+        </p>
+      </div>
+
+      <img class='landing-sexting' src="images/sexting.png" alt="sexting image">
+
+      <div class='landing-logo'>
+        <img class='landing-logo__img' src="images/iwf-logo.png" alt="IWF logo">
+      </div>
+
+      <div class='landing-logo'>
+        <img class='landing-logo__img' src="images/childline-logo.jpg" alt="childline logo">
+      </div>
+
+      <a class="landing-btn waves-effect waves-light btn" href='/age-check'>Report Here</a>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
