#28 initial form page

--- a/public/nori_dev.html
+++ b/public/nori_dev.html
@@ -45,11 +45,18 @@
 
   </div>
   <div class="other-options">
-    <p>
-        If your image doesn't meet  any of the above criteria, sadly we can't help you this time.
-        Although, we can offer other places where you can find help.
-    </p>
-    <a class="waves-effect waves-light btn"><i class="large material-icons left">info_outline</i>Further options</a>
+    <div class="info">
+          <i class="large material-icons">info_outline</i>
+    </div>
+
+    <div class="info-message">
+      <p class="other-report">
+          If your report doesn't fall into any of these categories you could visit
+          <span><a href="http://www.ceop.police.uk/report-abuse">ceop.police.uk</a></span>
+       or see our useful links section.</p>
+    </div>
+    <div class="spacer" style="clear: both;"></div>
+  <!--  <a class="waves-effect waves-light btn"><i class="large material-icons left">info_outline</i>Further options</a>-->
 
   </div>
   </div>
