--- a/public/nori_dev.html
+++ b/public/nori_dev.html
@@ -17,29 +17,24 @@
       <form action="#">
         <p>
           <input type="checkbox" class="filled-in" id="filled-in-box-1"  />
-          <label for="filled-in-box-1">options...options..everywhere...ddfdfgf...fdgdfg.sdsgfdsg</label>
+          <label for="filled-in-box-1">Someone posing in a sexual way</label>
         </p>
         <p>
           <input type="checkbox" class="filled-in" id="filled-in-box-2" />
-          <label for="filled-in-box-2">options...options..everywhere</label>
+          <label for="filled-in-box-2">Someone touching themselves in a sexual way</label>
         </p>
         <p>
           <input type="checkbox" class="filled-in" id="filled-in-box-3" />
-          <label for="filled-in-box-3">options...options..everywhere</label>
+          <label for="filled-in-box-3">Any sexual activity involving a child, adult or both</label>
         </p>
         <p>
           <input type="checkbox" class="filled-in" id="filled-in-box-4"  />
-          <label for="filled-in-box-4">options...options..everywhere</label>
+          <label for="filled-in-box-4">Someone hurting someone else</label>
         </p>
         <p>
           <input type="checkbox" class="filled-in" id="filled-in-box-5" />
-          <label for="filled-in-box-5">options...options..everywhere</label>
+          <label for="filled-in-box-5">Sexual activity that includes animals.</label>
         </p>
-        <p>
-          <input type="checkbox" class="filled-in" id="filled-in-box-6"   />
-          <label for="filled-in-box-6">options...options..everywhere</label>
-        </p>
-
         <a class="waves-effect waves-light btn" href='/url-form.html'>Confirm</a>
       </form>
 
@@ -51,9 +46,11 @@
 
       <div class="info-message">
         <p class="other-report">
-          If your report doesn't fall into any of these categories you could visit
-          <span><a href="http://www.ceop.police.uk/report-abuse">ceop.police.uk</a></span>
-          or see our useful links section.</p>
+          If the picture or video doesn't include any of the activities above,
+           we may not be able to remove it. Talk to a
+            <span><a href="https://www.childline.org.uk/get-support/1-2-1-counsellor-chat/"> Childline counsellor</a></span>
+             for more advice.
+          </p>
         </div>
         <div class="spacer" style="clear: both;"></div>
         <!--  <a class="waves-effect waves-light btn"><i class="large material-icons left">info_outline</i>Further options</a>-->
