#26 adds styling to age confirmation page and fixed fonts

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
     <body>
 
       <div class='landing-title'>
-        <span class='landing-title__phone'>Call 0800 1111 <i class="small material-icons whi">phonelink_ring</i></span>
-        <h1>Anonomously Report Online Content</h1>
-        <!-- <h3>Anonomously and Confidentially</h3> -->
+        <span class='link landing-title__phone'>Call 0800 1111 <i class="small material-icons whi">phonelink_ring</i></span>
+        <h1>Report Online Content</h1>
+        <h3>Anonymously and Confidentially</h3>
       </div>
 
       <div class='landing-info'>
-        <p >
+        <h4>YOU'VE ALREADY SHARED PHOTOS – WHAT NOW?</h4>
+        <p>
           If you’re under 18 and an indecent or nude pic of you is posted online, that is illegal. But we can help. Reporting is quick, easy and compeltely anonymous.
         </p>
       </div>
