--- a/public/nori_dev.html
+++ b/public/nori_dev.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="./css/form.css" media="screen" title="no title">
+  <link rel="stylesheet" href="css/main.css">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="css/form.css" media="screen" title="no title">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="content">
@@ -35,7 +36,7 @@
           <input type="checkbox" class="filled-in" id="filled-in-box-5" />
           <label for="filled-in-box-5">Sexual activity that includes animals.</label>
         </p>
-        <a class="waves-effect waves-light btn" href='/url-form.html'>Confirm</a>
+        <a class="purp waves-effect waves-light btn" href='/url-form.html'>Confirm</a>
       </form>
 
     </div>
@@ -57,7 +58,6 @@
 
       </div>
     </div>
-
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
