--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,21 @@
     <head>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/main.css">
+      <link type="text/css" rel="stylesheet" href="css/landing.css">
+      <link type="text/css" rel="stylesheet" href="css/responsive.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
-
       <div class='landing-title'>
-        <span class='link landing-title__phone'>Call 0800 1111 <i class="small material-icons whi">phonelink_ring</i></span>
-        <h1>Report Online Content</h1>
+        <div>
+          <p>chidline</p>
+          <span class='landing-title__phone'>
+            <a class='link' href="tel:+448001111">Call 0800 1111</a>
+            <i class="tiny material-icons whi">phonelink_ring</i>
+          </span>
+          <h1>Report Online Content</h1>
+        </div>
         <h3>Anonymously and Confidentially</h3>
       </div>
 
@@ -32,7 +38,12 @@
         <img class='landing-logo__img' src="images/childline-logo.jpg" alt="childline logo">
       </div>
 
-      <a class="landing-btn waves-effect waves-light btn" href='/age-check'>Report Here</a>
+      <div class='landing-btn'>
+        <a class="waves-effect waves-light btn-large" href='/age-check'>
+          <i class="material-icons right">open_in_new</i>
+          Report Content
+        </a>
+      </div>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
