--- a/public/url-form.html
+++ b/public/url-form.html
@@ -8,25 +8,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./css/form.css" media="screen" title="no title">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+    <body>
+    <div class="content">
+      <div class="title-div">
+        <h2>Report Content Web Address</h2>
+        <div class="progress">
+           <div class="determinate" style="width: 100%"></div>
+        </div>
 
-  <input type="text" name="" placeholder="https://websitelocation" value="">
-  <p id='submit-url'>
-    Submit
-  </p>
-  <!-- Modal pop-up on submission -->
-  <div class="modal-overlay closed" id="modal-overlay"></div>
-  <div class="modal closed" id="modal">
-    <button class="modal__close-button" id="close-button">Cancel</button>
-    <div class="modal__content">
-      <h1>The online content has been submitted!</h1>
-      <p>
-        If you would like IWF to update you by email, please enter your email address below.
-      </p>
-      <input placeholder="email address"></input>
-      <button onclick="location.href = './create-ladder.html'">+</button>
+        <p>
+          If you have any information you think may help us such as a description of where the content you are reporting is located on a large website or username and password needed to gain access, please include it in the description box.
+
+          If you have multiple webpages (URLs) to report, please include these in the description box.
+        </p>
+      </div>
+      <div class="form-container">
+        <form action="#">
+          <div class="input-field col s6">
+            <i class="material-icons prefix">mode_edit</i>
+            <textarea id="url" class="materialize-textarea"></textarea>
+            <label for="url">URL</label>
+          </div>
+          <div class="input-field col s6">
+            <i class="material-icons prefix">mode_edit</i>
+            <textarea id="description" class="materialize-textarea"></textarea>
+            <label for="description">Description</label>
+          </div>
+          <a class="waves-effect waves-light btn report-submit" href='/url-form.html'>Submit Report</a>
+        </form>
+      </div>
     </div>
-  </div>
 
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
   <script type="text/javascript" src="js/modal.js"></script>
   </body>
 </html>
