#41 fixes spelling mistake and adds link to help

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <div class='landing-info'>
         <h4>YOU'VE ALREADY SHARED PHOTOS – WHAT NOW?</h4>
         <p>
-          If you’re under 18 and an indecent or nude pic of you is posted online, that is illegal. But we can help. Reporting is quick, easy and compeltely anonymous.
+          If you’re under 18 and an indecent or nude pic of you is posted online, that is illegal. But we can <a href='https://www.childline.org.uk/info-advice/bullying-abuse-safety/online-mobile-safety/sexting/'>help</a>. Reporting is quick, easy and completely anonymous.
         </p>
       </div>
 
