--- a/public/nori_url.html
+++ b/public/nori_url.html
@@ -13,14 +13,19 @@
     <div class="title-div">
       <h2>Report Content Web Address</h2>
     </div>
-    <div class="">
+    <div class="progress">
+       <div class="determinate" style="width: 66%"></div>
+    </div>
+    <div class="message">
+      <h4 class="rosie">WEBSITE DETAILS</h4>
       <p>
         If you have any information you think may help us such as a description of where the content you are reporting is located on a large website or username and password needed to gain access, please include it in the description box.
 
-If you have multiple webpages (URLs) to report, please include these in the description box.
+        If you have multiple webpages (URLs) to report, please include these in the description box.
       </p>
     </div>
     <div class="form-container">
+      <h4 class="rosie">WEB ADDRESS</h4>
       <form action="#">
         <div class="input-field col s6">
           <i class="material-icons prefix">mode_edit</i>
