changes colours and titles regarding #45

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <link type="text/css" rel="stylesheet" href="css/landing.css">
       <link type="text/css" rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="css/main.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
@@ -16,9 +17,9 @@
             <a class='link' href="tel:+448001111">Call 0800 1111</a>
             <i class="tiny material-icons whi">phonelink_ring</i>
           </span>
-          <h1>Report Online Content</h1>
+          <h1 class='title'>REPORT ONLINE CONTENT</h1>
         </div>
-        <h3>Anonymously and Confidentially</h3>
+        <h3>Anonymously and confidentially</h3>
       </div>
 
       <div class='landing-info'>
@@ -41,7 +42,10 @@
       <div class='landing-btn'>
         <a class="waves-effect waves-light btn-large" href='/age-check'>
           Report Content
+          <i class="small material-icons whi">launch</i>
         </a>
+
+
       </div>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
