--- a/public/url-form.html
+++ b/public/url-form.html
@@ -18,7 +18,7 @@
     <body>
     <div class="content">
       <div class="title-div">
-        <h2>Report Content Web Address</h2>
+        <h1 class='title'>SUBMIT WEB ADDRESS</h2>
         <div class="progress">
            <div class="determinate" style="width: 100%"></div>
         </div>
