--- a/public/url-form.html
+++ b/public/url-form.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homepage</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/modal.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
     <meta charset="utf-8">
     <title></title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/form.css" media="screen" title="no title">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/modal.css">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+  </head>
     <body>
-    <div class="content">
-      <div class="title-div">
-        <h1 class='title'>SUBMIT WEB ADDRESS</h2>
-        <div class="progress">
-           <div class="determinate" style="width: 100%"></div>
+      <div class="content">
+        <div class="title-div background-dark-blue">
+          <h1 class='title'>REPORT CONTENT WEB ADDRESS</h2>
         </div>
+        <div class="progress">
+           <div class="determinate" style="width: 66%"></div>
+        </div>
+        <div class="message">
+          <h4 class="rosie">WEBSITE DETAILS</h4>
+          <p>
+            If you have any information you think may help us such as a description of where the content you are reporting is located on a large website or username and password needed to gain access, please include it in the description box.
 
-        <p>
-          If you have any information you think may help us such as a description of where the content you are reporting is located on a large website or username and password needed to gain access, please include it in the description box.
-
-          If you have multiple webpages (URLs) to report, please include these in the description box.
-        </p>
+            If you have multiple webpages (URLs) to report, please include these in the description box.
+          </p>
+        </div>
+        <div class="form-container">
+          <h4 class="rosie">WEB ADDRESS</h4>
+          <form action="#">
+            <div class="input-field col s6">
+              <i class="material-icons prefix">mode_edit</i>
+              <textarea id="url" class="materialize-textarea"></textarea>
+              <label for="url">URL</label>
+            </div>
+            <div class="input-field-2 input-field col s6 ">
+              <i class="material-icons prefix">mode_edit</i>
+              <textarea id="description" class="materialize-textarea"></textarea>
+              <label for="description">Description</label>
+            </div>
+            <a class="waves-effect waves-light btn report-submit" href='/url-form.html'>Submit Report</a>
+          </form>
+        </div>
       </div>
-      <div class="form-container">
-        <form action="#">
-          <div class="input-field col s6">
-            <i class="material-icons prefix">mode_edit</i>
-            <textarea id="url" class="materialize-textarea"></textarea>
-            <label for="url">URL</label>
-          </div>
-          <div class="input-field col s6">
-            <i class="material-icons prefix">mode_edit</i>
-            <textarea id="description" class="materialize-textarea"></textarea>
-            <label for="description">Description</label>
-          </div>
-          <a class="waves-effect waves-light btn report-submit" href='/url-form.html'>Submit Report</a>
-        </form>
-      </div>
-    </div>
 
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
