--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <link type="text/css" rel="stylesheet" href="css/landing.css">
       <link type="text/css" rel="stylesheet" href="css/responsive.css">
-      <link rel="stylesheet" href="css/main.css">
+      <link type="text/css" rel="stylesheet" href="css/main.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
