--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,10 @@
       </div>
 
       <div class='landing-btn'>
-        <a class="waves-effect waves-light btn-large" href='/age-check'>
+        <a class="waves-effect waves-light btn" href='/age-check'>
           Report Content
           <i class="small material-icons whi">launch</i>
         </a>
-
-
       </div>
 
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
