--- a/public/url-form.html
+++ b/public/url-form.html
@@ -53,7 +53,7 @@
               If you would like IWF to update you by email, please enter your email address below.
             </p>
             <input placeholder="email address"></input>
-            <a class="waves-effect waves-light btn-large" href='/index.html'>Submit</a>
+            <a class="waves-effect waves-light btn" href='/index.html'>Submit</a>
           </div>
         </div>
 
