adjusts minor styles #44

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         </p>
       </div>
 
-      <img class='landing-sexting' src="images/sexting.png" alt="sexting image">
+      <!-- <img class='landing-sexting' src="images/sexting.png" alt="sexting image"> -->
 
       <div class='landing-logo'>
         <img class='landing-logo__img' src="images/iwf-logo.png" alt="IWF logo">
