#59 addresses responsiveness for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class='landing-btn'>
-        <a class="waves-effect waves-light btn" href='/age-check'>
+        <a class="waves-effect waves-light btn" href='/age-check.html'>
           Report Content
           <i class="small material-icons whi">launch</i>
         </a>
