--- a/public/age-check.html
+++ b/public/age-check.html
@@ -69,10 +69,10 @@
     <!-- </div> -->
 
     <!-- required for yoti button -->
-    <!-- <script>
+    <script>
         _ybg.config.service = 'https://code.yoti.com/app/'
         _ybg.init()
-    </script> -->
+    </script>
     <script src="js/browser.js"></script>
     <script type="text/javascript" src='js/animate.js'></script>
 
