fiddles broswer.js to take mobile to app

--- a/public/age-check.html
+++ b/public/age-check.html
@@ -69,10 +69,10 @@
     <!-- </div> -->
 
     <!-- required for yoti button -->
-    <script>
-        _ybg.config.service = 'https://code.yoti.com/app/'
-        _ybg.init()
-    </script>
+    <!-- <script>
+        t.config.service = 'https://code.yoti.com/app/'
+        t.init()
+    </script> -->
     <script src="js/browser.js"></script>
     <script type="text/javascript" src='js/animate.js'></script>
 
