cleans up broswer.js

--- a/public/age-check.html
+++ b/public/age-check.html
@@ -58,8 +58,8 @@
         <a
           class="btn yoti-connect learn-more btn-primary"
           data-target='embed'
-          data-yoti-scenario-id="5be10ae7-af29-40b0-8d33-a0fb90cb0e88"
-          data-yoti-application-id='3392788e-e529-4309-8ed7-54d7ac554055'
+          data-yoti-scenario-id
+          data-yoti-application-id
           data-yoti-type="inline"
           data-size="medium">
           Share your age using Yoti
