styles the incoming QR code

--- a/public/age-check.html
+++ b/public/age-check.html
@@ -42,8 +42,8 @@
         </div>
       </div>
 
-      <div class='yoti-info'>
-        <div id='yoti-info__content'>
+      <div class='yoti-info qr-code-output'>
+        <div  id='yoti-info__content'>
           <h3>YOTI - CONFIDENTIALLY VERIFY YOUR AGE</h3>
           <i class="identity-1 small material-icons">perm_identity</i>
           <p>
@@ -51,8 +51,6 @@
           </p>
         </div>
       </div>
-
-    <span class="qr-code-output"></span>
 
       <span class='yoti-btn get-qr-button' id='yotiBtn'>
         <a
