#61 adds yoti logo and extra paragraph

--- a/public/age-check.html
+++ b/public/age-check.html
@@ -26,7 +26,7 @@
       <div class='age-responsive'>
         <div class='age-info background-blue'>
           <p class='why-eighteen'>
-             To remove explicit online content we need to confirm that you are under 18.
+             To remove explicit online content we will only ask for your age. Not even your name! You must be under 18 years old.
             <a class='link text-blue' href='https://www.iwf.org.uk/what-we-do' target="_blank">
                Find out why here
                <i class="tiny material-icons">info_outline</i>
@@ -43,16 +43,18 @@
       </div>
 
       <div class='yoti-info qr-code-output'>
-        <div  id='yoti-info__content'>
-          <h3>YOTI - CONFIDENTIALLY VERIFY YOUR AGE</h3>
-          <i class="identity-1 small material-icons">perm_identity</i>
+        <div id='yoti-info__content'>
+          <div class='yoti-intro'>
+            <h3>YOTI - CONFIDENTIALLY VERIFY YOUR AGE</h3>
+            <img src="images/yoti-logo.svg" alt="yoti logo">
+          </div>
           <p>
             Yoti empowers you to take back control over your identity. If you don't have a Yoti digital identity, please create one <a class='link' href='yoti'>here</a> and use it to verify you are under 17.
           </p>
         </div>
       </div>
 
-      <span class='yoti-btn get-qr-button' id='yotiBtn'>
+      <span class='yoti-btn' id='yotiBtn'>
         <a
           class="btn yoti-connect learn-more btn-primary"
           data-target='embed'
