#61 #59 responsiveness and content

--- a/public/age-check.html
+++ b/public/age-check.html
@@ -42,16 +42,20 @@
         </div>
       </div>
 
-      <div class='yoti-info qr-code-output'>
-        <div id='yoti-info__content'>
+      <div class='yoti-info '>
+        <div class= 'qr-code-output' id='yoti-info__content'>
           <div class='yoti-intro'>
             <h3>YOTI - CONFIDENTIALLY VERIFY YOUR AGE</h3>
             <img src="images/yoti-logo.svg" alt="yoti logo">
           </div>
-          <p>
+          <p class='yoti-description'>
             Yoti empowers you to take back control over your identity. If you don't have a Yoti digital identity, please create one <a class='link' href='yoti'>here</a> and use it to verify you are under 17.
           </p>
         </div>
+        <p class='scan-me'>
+          SCAN ME WITH YOTI
+          <img src="images/yoti-logo.svg" class='popup-yoti' alt="yoti logo">
+        </p>
       </div>
 
       <span class='yoti-btn' id='yotiBtn'>
